# guvciew-meet4k

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  config.status  configure  configure.ac  configure.in  sdl.pc
data/: Makefile.am  Makefile.in  guvcview.1  guvcview.appdata.xml.in.in  guvcview.desktop.in.in  guvcview.in.in
data/icons/: Makefile.am  Makefile.in
debian/: README.Debian  add_files_deb.sh  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  guvcview-default.ex  guvcview.1  guvcview.dirs  guvcview.doc-base.EX  guvcview.install  guvcview.manpages  guvcview.postinst  guvcview.postrm  guvcview.substvars  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
guvcview/: Makefile.am  config.c  config.h  core_io.c  core_io.h  gui.c  gui.h  gui_gtk3.c  gui_gtk3.h  gui_gtk3_audioctrls.c  gui_gtk3_callbacks.c  gui_gtk3_callbacks.h  gui_gtk3_h264ctrls.c  gui_gtk3_meet4kctrls.c  gui_gtk3_menu.c  gui_gtk3_v4l2ctrls.c  gui_gtk3_videoctrls.c  gui_qt5.cpp  gui_qt5.h  gui_qt5.hpp  gui_qt5_audioctrls.cpp  gui_qt5_callbacks.cpp  gui_qt5_h264ctrls.cpp  gui_qt5_menu.cpp  gui_qt5_v4l2ctrls.cpp  gui_qt5_videoctrls.cpp  guvcview.c  options.c  options.h  video_capture.c  video_capture.h
guvcview/trunk/: configure.in
guvcview/trunk/src/: Makefile.am  avilib.c  avilib.h  guvcview.c  utils.c  utils.h  v4l2uvc.c  v4l2uvc.h
gview_audio/: Makefile.am  audio.c  audio.h  audio_fx.c  audio_portaudio.c  audio_portaudio.h  audio_pulseaudio.c  audio_pulseaudio.h  core_time.c  gviewaudio.h
gview_encoder/: Makefile.am  audio_codecs.c  avi.c  avi.h  encoder.c  encoder.h  file_io.c  file_io.h  gviewencoder.h  libav_encoder.c  matroska.c  matroska.h  muxer.c  stream_io.c  stream_io.h  video_codecs.c
gview_render/: Makefile.am  gviewrender.h  render.c  render.h  render_fx.c  render_osd_crossair.c  render_osd_crosshair.c  render_osd_vu_meter.c  render_sdl1.c  render_sdl1.h  render_sdl2.c  render_sdl2.h  render_sfml.cpp  render_sfml.h  render_sfml.hpp
gview_v4l2core/: Makefile.am  colorspaces.c  colorspaces.h  control_profile.c  core_time.c  core_time.h  frame_decoder.c  frame_decoder.h  gviewv4l2core.h  jpeg_decoder.c  jpeg_decoder.h  save_image.c  save_image.h  save_image_bmp.c  save_image_jpeg.c  save_image_png.c  soft_autofocus.c  soft_autofocus.h  uvc_h264.c  uvc_h264.h  uvc_meet4k.c  uvc_meet4k.ch  uvc_meet4k.chp  uvc_meet4k.h  v4l2_controls.c  v4l2_controls.h  v4l2_core.c  v4l2_core.h  v4l2_devices.c  v4l2_devices.h  v4l2_formats.c  v4l2_formats.h  v4l2_xu_ctrls.c  v4l2_xu_ctrls.h
includes/: defs.h  gview.h
pixmaps/: Makefile.am  Makefile.in  camera.xpm  camera.xpm_  close.xpm  folder.xpm  guvcview.1  guvcview.desktop  guvcview.desktop_  guvcview.menu  guvcview.png_  guvcview.xpm  movie.xpm  movie.xpm_  save.xpm
pkgconfig/: gviewaudio-0.1.pc.in  gviewencoder-0.1.pc.in  gviewrender-0.1.pc.in  gviewv4l2core-0.1.pc.in  v4l2core-0.1.pc.in
po/: ChangeLog  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  guvcview.pot  he.po  hr.po  it.po  ja.po  linguas  lv.po  nl.po  pl.po  potfiles  pt.po  pt_BR.po  pt_PT.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
po/gview_v4l2core/: Makefile.in.in  bg.po  bs.po  cs.po  da.po  de.po  en_AU.po  es.po  eu.po  fo.po  fr.po  gl.po  he.po  hr.po  it.po  ja.po  lv.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sr.po  tr.po  uk.po  zh_TW.po
src/: Makefile.am  Makefile.in  acconfig.h  acodecs.c  acodecs.h  audio_effects.c  audio_effects.h  audio_tab.c  audio_tab.h  autofocus.c  autofocus.h  avilib.c  avilib.h  callbacks.c  callbacks.h  close.c  close.h  colorspaces.c  colorspaces.h  config.h  create_image.c  create_image.h  create_video.c  create_video.h  datatype.h  dct.c  dct.h  defs.h  encoder.c  file_io.c  file_io.h  flv.c  flv.h  globals.c  globals.h  guvcview.c  guvcview.h  huffdata.h  huffman.c  huffman.h  (+72 more)
v4l2_core/: Makefile.am  core_io.c  core_time.c  core_time.h  uvc_h264.c  uvc_h264.h  v4l2_controls.c  v4l2_controls.h  v4l2_core.c  v4l2_core.h  v4l2_devices.c  v4l2_devices.h  v4l2_formats.c  v4l2_formats.h  v4l2_xu_ctrls.c  v4l2_xu_ctrls.h
